[gd_scene load_steps=2 format=3 uid="uid://dn1am6ycmaxk6"]

[ext_resource type="Script" path="res://scripts/auth_screen.gd" id="1_1"]

[node name="AuthScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="LoginContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="LoginContainer"]
layout_mode = 2
text = "Вход"
horizontal_alignment = 1

[node name="UsernameEdit" type="LineEdit" parent="LoginContainer"]
layout_mode = 2
placeholder_text = "Имя пользователя"

[node name="PasswordEdit" type="LineEdit" parent="LoginContainer"]
layout_mode = 2
placeholder_text = "Пароль"
secret = true

[node name="LoginButton" type="Button" parent="LoginContainer"]
layout_mode = 2
text = "Войти"

[node name="SwitchToRegister" type="Button" parent="LoginContainer"]
layout_mode = 2
text = "Регистрация"

[node name="RegisterContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="RegisterContainer"]
layout_mode = 2
text = "Регистрация"
horizontal_alignment = 1

[node name="UsernameEdit" type="LineEdit" parent="RegisterContainer"]
layout_mode = 2
placeholder_text = "Имя пользователя"

[node name="PasswordEdit" type="LineEdit" parent="RegisterContainer"]
layout_mode = 2
placeholder_text = "Пароль"
secret = true

[node name="ConfirmPasswordEdit" type="LineEdit" parent="RegisterContainer"]
layout_mode = 2
placeholder_text = "Подтвердите пароль"
secret = true

[node name="RegisterButton" type="Button" parent="RegisterContainer"]
layout_mode = 2
text = "Зарегистрироваться"

[node name="SwitchToLogin" type="Button" parent="RegisterContainer"]
layout_mode = 2
text = "Уже есть аккаунт"

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
horizontal_alignment = 1

[connection signal="pressed" from="LoginContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="LoginContainer/SwitchToRegister" to="." method="_on_switch_mode_button_pressed"]
[connection signal="pressed" from="RegisterContainer/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="RegisterContainer/SwitchToLogin" to="." method="_on_switch_mode_button_pressed"]
